--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "mixpanel": "^0.14.0",
     "mongoose": "^5.12.15",
     "multer": "^1.4.4",
-    "node-cron": "^3.0.0",
+    "node-cron": "^3.0.1",
     "socket.io": "^4.4.1",
-    "stripe": "^8.211.0"
+    "stripe": "^8.211.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
