--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "nodemon ./src/index.ts"
   },
   "dependencies": {
+    "@types/voucher-code-generator": "^1.1.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^15.0.0",
@@ -22,7 +23,8 @@
     "node-cron": "^3.0.1",
     "socket.io": "^4.4.1",
     "stripe": "^8.211.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "voucher-code-generator": "^1.3.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
