--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "dev": "nodemon ./src/index.ts"
   },
   "dependencies": {
-    "@types/voucher-code-generator": "^1.1.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^15.0.0",
@@ -18,7 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "mixpanel": "^0.14.0",
-    "mongoose": "^5.12.15",
+    "mongoose": "^6.5.3",
     "multer": "^1.4.4",
     "node-cron": "^3.0.1",
     "socket.io": "^4.4.1",
@@ -32,12 +31,14 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/mixpanel": "^2.14.3",
+    "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.7",
     "@types/node-cron": "^3.0.1",
     "@types/socket.io": "^3.0.2",
     "@types/stripe": "^8.0.417",
+    "@types/voucher-code-generator": "^1.1.1",
     "nodemon": "^2.0.15",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.5"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.7.4"
   }
 }
