--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^15.0.0",
     "express": "^4.17.2",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": ">=9.0.0",
     "jwt-decode": "^3.1.2",
     "mixpanel": "^0.14.0",
     "mongoose": "^6.5.3",
